--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,22 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-/* criar estilo para que o html e a body tenha uma altura da view port */
+
+
+@layer components {
+  .checkbox_checked {
+    background: url("check.svg") no-repeat center, linear-gradient(135deg, #55DDFF 0%, #C058F3 100%);
+  }
+
+  body * {
+    @apply transition-colors duration-500;
+  }
+}
+
+
+
 html, body, #root {
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  font-family: "Josefin Sans", sans-serif;
 }
